--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -29,3 +29,11 @@
 [[constraint]]
   name = "github.com/gosuri/uitable"
   branch = "master"
+
+[[constraint]]
+  name = "github.com/stretchr/testify"
+  version = "1.2.2"
+
+[[constraint]]
+  name = "gopkg.in/yaml.v2"
+  version = "2.2.1"
