--- a/examples/helloworld/Dockerfile
+++ b/examples/helloworld/Dockerfile
@@ -1,8 +1,7 @@
 FROM alpine:latest
 
 COPY cnab/app/run /cnab/app/run
-COPY cnab/manifest.json /cnab/manifest.json
-COPY cnab/parameters.json /cnab/parameters.json
+COPY cnab/bundle.json /cnab/bundle.json
 COPY Dockerfile cnab/Dockerfile
 
 CMD [ "/cnab/app/run" ]
