--- a/examples/helloworld/cnab/Dockerfile
+++ b/examples/helloworld/cnab/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:latest
 
-COPY cnab/app/run /cnab/app/run
-COPY cnab/bundle.json /cnab/bundle.json
+COPY app/run /cnab/app/run
+COPY bundle.json /cnab/bundle.json
 COPY Dockerfile cnab/Dockerfile
 
 CMD [ "/cnab/app/run" ]
