feat: Load credential sets

--- a/pkg/credentials/testdata/staging.yaml
+++ b/pkg/credentials/testdata/staging.yaml
@@ -2,7 +2,7 @@ name: staging
 credentials:
   - name: read_file
     source:
-      path: testdata/someconfig.txt
+      path: $GOPATH/src/github.com/deis/duffle/pkg/credentials/testdata/someconfig.txt
     destination:
       type: env
       env: TEST_READ_FILE
