feat: allow Docker to mount local tmpdirs for credentials.

--- a/pkg/credentials/testdata/staging.yaml
+++ b/pkg/credentials/testdata/staging.yaml
@@ -23,7 +23,7 @@ credentials:
       value: quokka 
     destination:
       env: TEST_FALLTHROUGH
-      path: animals/quokka.txt
+      path: /animals/quokka.txt
   - name: plain_value
     source:
       value: cassowary
