--- a/examples/multi-component/duffle.toml
+++ b/examples/multi-component/duffle.toml
@@ -3,11 +3,14 @@ name = "multi-component"
 [components]
     [components.component-a]
         name = "component-a"
+        registry = "deis"
         builder = "docker"
+        configuration = { registry = "microsoft" }
 
     [components.component-b]
         name = "component-b"
         builder = "docker"
+        configuration = { registry = "microsoft" }
 
     [components.mock-builder]
         name = "mock-builder"
@@ -16,3 +19,4 @@ name = "multi-component"
     [components.cnab]
         name = "cnab"
         builder = "docker"
+        configuration = { registry = "microsoft" }
