--- a/examples/helloworld/duffle.toml
+++ b/examples/helloworld/duffle.toml
@@ -1,3 +1,19 @@
 name = "helloworld"
-registry = "bacongobbler"
 components = ["cnab"]
+
+[parameters]
+    [parameters.hello]
+    type = "int"
+    defaultValue = "some default"
+    allowedValues = ["foo", "bar"]
+    minValue = 100
+    maxValue = 200
+    minLength = 100
+    maxLength = 200
+    [parameters.hello.metadata]
+    description = "hello"
+
+[credentials]
+    [credentials.quux]
+    path = "pquux"
+    env = "equux"
