update helloworld example to new schema
Also fixes an issue where the `images` field in bundle.json was `null` rather than an empty array when no other components were specified.

Signed-off-by: Matthew Fisher <matt.fisher@microsoft.com>

--- a/examples/helloworld/duffle.toml
+++ b/examples/helloworld/duffle.toml
@@ -1,11 +1,16 @@
 name = "helloworld"
-components = ["cnab"]
+
+[components]
+    [components.cnab]
+        name = "cnab"
+        builder = "docker"
+        configuration = { registry = "microsoft" }
 
 [parameters]
     [parameters.hello]
     type = "int"
-    defaultValue = "some default"
-    allowedValues = ["foo", "bar"]
+    defaultValue = "1"
+    allowedValues = ["1", "2"]
     minValue = 100
     maxValue = 200
     minLength = 100
