--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -3,6 +3,10 @@
   version = "0.0.3"
 
 [[constraint]]
+  name = "github.com/spf13/viper"
+  version = "v1.2"
+
+[[constraint]]
   name = "github.com/Masterminds/semver"
   version = "1.4.2"
 
