Manifest loader respects json tags
The manifest stucture contains structures tagged with json fields.
However, the viper reader by default only respect mapstructure tags.
This made some fields missing when building a manifest into a bundle
(e.g: the parameters DataType which is json-tagged as `type` failed to
parse).

This fix that by instructing mapstructure to respect json tags.

Signed-off-by: Simon Ferquel <simon.ferquel@docker.com>

--- a/pkg/duffle/manifest/testdata/duffle.toml
+++ b/pkg/duffle/manifest/testdata/duffle.toml
@@ -4,3 +4,6 @@ name = "testbundle"
         name = "cnab"
         builder = "docker"
         configuration = { registry = "microsoft" }
+[parameters]
+    [parameters.foo]
+        type = "string"
