Don't pull image by default
Signed-off-by: Simon Ferquel <simon.ferquel@docker.com>

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -41,3 +41,8 @@
 [[constraint]]
   name = "gopkg.in/yaml.v2"
   version = "2.2.1"
+
+[prune]
+  non-go = true
+  unused-packages = true
+  go-tests = true
