--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -42,6 +42,10 @@
   name = "gopkg.in/yaml.v2"
   version = "2.2.1"
 
+[[constraint]]
+  name = "github.com/bacongobbler/browser"
+  version = "1.0.1"
+
 [prune]
   non-go = true
   unused-packages = true
