--- a/pkg/duffle/manifest/testdata/duffle.toml
+++ b/pkg/duffle/manifest/testdata/duffle.toml
@@ -4,3 +4,11 @@ name = "testbundle"
         name = "cnab"
         builder = "docker"
         configuration = { registry = "microsoft" }
+[parameters.foo]
+    type = "string"
+
+[credentials.bar]
+    path = "/tmp"
+
+[[maintainers]]
+  name = "sally"
