--- a/pkg/duffle/manifest/testdata/duffle.yaml
+++ b/pkg/duffle/manifest/testdata/duffle.yaml
@@ -5,3 +5,12 @@ components:
     builder: docker
     configuration:
       registry: microsoft
+parameters:
+  foo:
+    type: string
+credentials:
+  bar:
+    path: /tmp
+maintainers:
+- name: sally
+
