Vendoring update to the same cli as docker-app
Signed-off-by: Simon Ferquel <simon.ferquel@docker.com>

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -20,7 +20,8 @@
 
 [[constraint]]
   name = "github.com/docker/cli"
-  version = "v18.06.0-ce"
+  branch = "docker-app-fork"
+  source = "github.com/simonferquel/cli"
 
 [[override]]
   name = "github.com/docker/distribution"
