--- a/golangci.yml
+++ b/golangci.yml
@@ -16,4 +16,4 @@ linters:
 
 linters-settings:
   goimports:
-    local-prefixes: github.com/deis/duffle
+    local-prefixes: github.com/deislabs/duffle
