Update tests with invocationImages

--- a/pkg/duffle/manifest/testdata/duffle.toml
+++ b/pkg/duffle/manifest/testdata/duffle.toml
@@ -1,6 +1,6 @@
 name = "testbundle"
-[components]
-    [components.cnab]
+[invocationImages]
+    [invocationImages.cnab]
         name = "cnab"
         builder = "docker"
         configuration = { registry = "microsoft" }
