--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -50,3 +50,6 @@
   non-go = true
   unused-packages = true
   go-tests = true
+[[constraint]]
+  name = "github.com/docker/go"
+  version = "1.5.1-1"
