--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -20,7 +20,11 @@
 
 [[constraint]]
   name = "github.com/docker/cli"
-  version = "v18.06.0-ce"
+  revision = "f95ca8e1ba6c22c9abcdbf65e8dcc39c53958bba"
+
+[[override]]
+  name = "github.com/docker/docker"
+  revision = "f76d6a078d881f410c00e8d900dcdfc2e026c841"
 
 [[override]]
   name = "github.com/docker/distribution"
