--- a/pkg/duffle/manifest/testdata/duffle.yaml
+++ b/pkg/duffle/manifest/testdata/duffle.yaml
@@ -5,6 +5,12 @@ invocationImages:
     builder: docker
     configuration:
       registry: microsoft
+images:
+  istio:
+    description: "istio images"
+    imageType: "docker"
+    image: "docker.io/istio/citadel:1.0.2"
+    digest: "sha256:ca4050c9fed3a2ddcaef32140686613c4110ed728f53262d0a23a7e17da73111"
 parameters:
   foo:
     type: string
