--- a/pkg/duffle/manifest/testdata/duffle.toml
+++ b/pkg/duffle/manifest/testdata/duffle.toml
@@ -12,3 +12,12 @@ name = "testbundle"
 
 [[maintainers]]
   name = "sally"
+
+[actions]
+    [actions.hello]
+        description= "says hello"
+        stateless = true
+
+[images]
+    [images.test]
+        image = "test:latest"
