--- a/pkg/duffle/manifest/testdata/duffle.yaml
+++ b/pkg/duffle/manifest/testdata/duffle.yaml
@@ -14,3 +14,10 @@ credentials:
 maintainers:
 - name: sally
 
+actions:
+    hello:
+      description: "says hello"
+      stateless: true
+images:
+    test:
+      image: "test:latest"
