--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -62,3 +62,7 @@
 [[constraint]]
   name = "github.com/docker/go"
   version = "1.5.1-1"
+
+[[constraint]]
+  name = "contrib.go.opencensus.io/exporter/ocagent"
+  version = "0.4.11"
