--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,3 @@
-# Go
-# Build your Go application.
-# Add steps that test, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/vsts/pipelines/languages/go
-
 pool:
   vmImage: 'Ubuntu 16.04'
 
@@ -25,7 +20,19 @@ steps:
 
 - script: |
     go version
-    go get -v -t -d ./...
-    make bootstrap build test lint
+    make bootstrap
+    make build
+    make coverage
+    make lint
   workingDirectory: '$(modulePath)'
-  displayName: 'Get dependencies, build, test'
+  displayName: 'Get dependencies, build, test, pubish, test and coverage results'
+
+- task: PublishTestResults@2
+  inputs:
+    testRunner: JUnit
+    testResultsFiles: $(System.DefaultWorkingDirectory)/**/report.xml
+
+- task: PublishCodeCoverageResults@1
+  inputs:
+    codeCoverageTool: Cobertura 
+    summaryFileLocation: $(System.DefaultWorkingDirectory)/**/coverage.xml
