duffle relocate of thick bundles
Fixes https://github.com/deislabs/duffle/issues/705

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -57,7 +57,7 @@
 
 [[constraint]]
   name = "github.com/pivotal/image-relocation"
-  revision = "532dd0b42e7a50010d7868364309cd314a2bb376"
+  version = "v0.1"
 
 [[constraint]]
   name = "github.com/deislabs/cnab-go"
