Update import paths for Duffle to github.com/cnabio
Signed-off-by: Radu M <root@radu.sh>

--- a/golangci.yml
+++ b/golangci.yml
@@ -16,4 +16,4 @@ linters:
 
 linters-settings:
   goimports:
-    local-prefixes: github.com/deislabs/duffle
+    local-prefixes: github.com/cnabio/duffle
