chore(examples/wordpress-mysql): update Dockerfile steps to use Py3
Signed-off-by: Vaughn Dice <vadice@microsoft.com>

--- a/examples/wordpress-mysql/cnab/Dockerfile
+++ b/examples/wordpress-mysql/cnab/Dockerfile
@@ -9,10 +9,10 @@ RUN apk add --update ca-certificates \
  && tar -xvf helm-${HELM_LATEST_VERSION}-linux-amd64.tar.gz \
  && mv linux-amd64/helm /usr/local/bin \
  && rm -f /helm-${HELM_LATEST_VERSION}-linux-amd64.tar.gz \
- && apk add bash py-pip \
- && apk add --virtual=build gcc libffi-dev musl-dev openssl-dev python-dev make \
- && pip install --upgrade pip \
- && pip install azure-cli \
+ && apk add bash py3-pip \
+ && apk add --virtual=build gcc libffi-dev musl-dev openssl-dev python3-dev make \
+ && pip3 install --upgrade pip \
+ && pip3 install azure-cli \
  && apk del --purge deps \
  && rm /var/cache/apk/*
 
